fix navbar spacing

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -15,6 +15,7 @@ $charcoal: #3b3a36;
   }
   box-shadow: 0.2rem 0.2rem 0.2rem 0.1rem rgba(0, 0, 0, 0.2);
   padding: 0.3rem 1rem;
+  margin-left: 1.5rem;
 }
 
 .fancy-button:hover {
